# illumos-nvpair

./: Cargo.toml  LICENSE  README.md
.github/buildomat/jobs/: build-and-test.sh
illumos-nvpair/: Cargo.toml  README.md
illumos-nvpair-sys/: Cargo.toml  README.md
illumos-nvpair-sys/src/: lib.rs
illumos-nvpair/src/: lib.rs
nvpair/: Cargo.toml  README.md
nvpair-sys/: Cargo.toml  README.md  generate.sh
nvpair/src/: lib.rs
