[package]
name = "illumos-nvpair"
version = "0.1.0"
edition = "2021"
description = "Idiomatic Rust bindings for illumos libnvpair"
license = "MPL-2.0"
repository = "https://github.com/oxidecomputer/illumos-nvpair"

[dependencies]
illumos-nvpair-sys = { version = "0.1.0", path = "../illumos-nvpair-sys" }
